--- a/src/Components/movieInfos/MovieInfo.scss
+++ b/src/Components/movieInfos/MovieInfo.scss
@@ -1,19 +1,29 @@
+@use '../App.scss';
+
 .movie-info-wrapper{
   width: 100%;
   max-width: 800px;
+  background-color: App.$ligthBackgroundColor;
+  color: App.$textColor;
   display: flex;
   
   .movie-texts{
-    width: 100%;
+    width: 60%;
     display: flex;
     flex-direction: column;
+
+    .favorite-button{
+      width: 150px;
+      background-color: #808080;
+      color: #FFFFFF;
+      border: 1px solid #808080;
+    }
   }
   
   .movie-poster{
-    width: 100%;
+    width: 40%;
     display: flex;
     justify-content: center;
     align-items: center;
   }
-
 }
