--- a/src/Components/App.scss
+++ b/src/Components/App.scss
@@ -2,10 +2,17 @@ $backgroundColor: #160F29;
 $ligthBackgroundColor: #246A73;
 $textColor: #368F8B;
 $ligthColor: #DDBEA8;
+$whiteColor: #F5EAEA;
+$blackColor: #303030;
+$grayColor: #808080;
+
+.page-container {
+  height: 100vh;
+}
 
 .main-container {
   width: 100%;
-  max-width: 900px;
   height: 100%;
-  margin: 0 auto;
+  background-color: $ligthBackgroundColor;
+  margin: auto;
 }
