--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -4,4 +4,7 @@
   height: 100px;
   background-color: App.$backgroundColor;
   color: App.$textColor;
+  border: 0px;
+  font-size: 30px;
+  box-shadow: 0 -10px 10px 0 rgba($color: #000000, $alpha: 0.25);
 }
