--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -4,4 +4,6 @@
   height: 100px;
   background-color: App.$backgroundColor;
   color: App.$textColor;
+  font-size: 30px;
+  box-shadow: 0 10px 10px 0 rgba($color: #000000, $alpha: 0.25);
 }
