--- a/src/Components/searchBar/searchBar.scss
+++ b/src/Components/searchBar/searchBar.scss
@@ -2,20 +2,26 @@
 
 .search-bar-wrapper {
   width: 100%;
+  height: 100px;
   max-width: 800px;
   background-color: App.$ligthBackgroundColor;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
 
   .search-input{
-    background-color: red;
+    width: 400px;
+    background-color: App.$whiteColor;
+    font-size: 16px;
+    font-weight: 500px;
   }
 
   .search-button{
     width: 150px;
-    background-color: #808080;
-    color: #FFFFFF;
-    border: 1px solid #808080;
+    background-color: App.$grayColor;
+    color: App.$whiteColor;
+    border: 1px solid App.$grayColor;
+    font-size: 16px;
+    font-weight: 700;
   }
 }
