feat: title  layout

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -4,6 +4,7 @@
   height: 100px;
   background-color: App.$backgroundColor;
   color: App.$textColor;
+  border: 0;
   font-size: 30px;
   box-shadow: 0 10px 10px 0 rgba($color: #000000, $alpha: 0.25);
 }
