--- a/src/Components/pageTitle/PageTitle.scss
+++ b/src/Components/pageTitle/PageTitle.scss
@@ -4,11 +4,20 @@
   width: 100%;
   max-width: 800px;
   height: 100px;
+  padding: 20px 0;
   background-color: App.$ligthBackgroundColor;
-  color: App.$textColor;
-  display: flex;
-  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   
+  .title {
+    font-size: 40px;
+    font-weight: 700;
+    color: App.$ligthColor;
+  }
+
+  .title-text {
+    font-size: 16px;
+    font-weight: 500;
+    color: App.$textColor;
+  }
 }
