feat: final layout

--- a/src/Components/App.scss
+++ b/src/Components/App.scss
@@ -1,6 +1,6 @@
 $backgroundColor: #160F29;
-$ligthBackgroundColor: #246A73;
-$textColor: #368F8B;
+$ligthBackgroundColor: #32818b;
+$textColor: #1ac7be;
 $ligthColor: #DDBEA8;
 $whiteColor: #F5EAEA;
 $blackColor: #303030;
