--- a/src/Components/pageTitle/PageTitle.scss
+++ b/src/Components/pageTitle/PageTitle.scss
@@ -10,9 +10,9 @@
   align-items: center;
   
   .title {
-    font-size: 40px;
-    font-weight: 700;
-    color: App.$ligthColor;
+    font-family: 'Lobster', cursive;
+    font-size: 60px;
+    color: App.$textColor;
   }
 
   .title-text {
