--- a/src/Components/movieInfos/MovieInfo.scss
+++ b/src/Components/movieInfos/MovieInfo.scss
@@ -7,6 +7,7 @@
   background-color: App.$ligthBackgroundColor;
   color: App.$textColor;
   display: flex;
+  padding: 0 15px;
   
   .empty-text{
     font-size: 30px;
